--- a/package.json
+++ b/package.json
@@ -12,22 +12,37 @@
     "@clerk/nextjs": "^4.29.12",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.1.4",
+    "@next/mdx": "^14.2.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/mdx": "^2.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.365.0",
     "next": "14.1.4",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-katex": "^7.0.0",
+    "rehype-pretty-code": "^0.13.1",
+    "rehype-stringify": "^10.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-highlight.js": "^5.2.0",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "shiki": "^1.3.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "unified": "^11.0.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@shikijs/rehype": "^1.3.0",
+    "@tailwindcss/typography": "^0.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
