--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-syntax-highlighter": "^15.5.0",
+    "reading-time": "^1.5.0",
     "rehype-katex": "^7.0.0",
     "rehype-pretty-code": "^0.13.1",
     "rehype-stringify": "^10.0.0",
