--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
     "react-dom": "^18",
     "react-syntax-highlighter": "^15.5.0",
     "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.0",
     "rehype-pretty-code": "^0.13.1",
+    "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
     "remark-gfm": "^4.0.0",
     "remark-highlight.js": "^5.2.0",
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
+    "remark-toc": "^9.0.0",
     "shiki": "^1.3.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.4",
