--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/mdx": "^2.0.12",
     "class-variance-authority": "^0.7.0",
@@ -32,7 +33,7 @@
     "rehype-pretty-code": "^0.13.1",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
-    "remark-gfm": "^4.0.0",
+    "remark-gfm": "^3.0.1",
     "remark-highlight.js": "^5.2.0",
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
